--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <li>
             <div class="flex flex-col items-center text-center justify-center md:pr-8">
               <a class="hover:text-primary2 focus:text-primary1" href="#section3" id="menu3">
-                <h2 class="font-medium title-font mt-4 text-lg">Services</h2>
+                <h2 class="font-medium title-font mt-4 text-lg">Methodology</h2>
               </a>
               <div id="menu3-underline" class="w-full h-1 bg-primary1 rounded mb-4 hidden"></div>
             </div>
