--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
       <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
       <div class="text-center lg:w-2/3 w-full">
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Scale your leads on LinkedIn & predictably drive more revenue, 100% done-for-you.</h1>
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Revolutionize Your B2B Engagement with Customized Email Strategies</h1>
         <p class="mb-8 leading-relaxed">SmartLeadX uses data from thousands of outbound B2B campaigns to send proven, personalized messages to your dream clients on LinkedIn — getting positive responses straight to your inbox.</p>
         <div class="flex justify-center">
           <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
