--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-col text-center w-full mb-20">
         <h2 class="text-xs text-indigo-500 tracking-widest font-medium title-font mb-1">ROOF PARTY POLAROID</h2>
-        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">How we generate leads for clients</h1>
-        <p class="lg:w-2/3 mx-auto leading-relaxed text-base">We leverage high performing data from executing thousands of successful LinkedIn campaigns in every industry to target & engage your most qualified decision makers, driving them directly into your sales funnel.</p>
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Unleashing the power of strategic email campaigns to generate revenue</h1>
+        <p class="lg:w-2/3 mx-auto leading-relaxed text-base">From countless B2B campaigns across diverse industries, we've gathered incredible insights. We use that to get your ideal decision-makers' attention and smoothly guide them right into your sales funnel. .</p>
       </div>
       <div class="flex flex-wrap">
         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
