--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <!-- Section1  START-->
   <section id="section1" class="text-gray-600 body-font">
     <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
-      <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
+      <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="assets/styles/ian-schneider-TamMbr4okv4-unsplash.jpg">
       <div class="text-center lg:w-2/3 w-full">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Revolutionize Your B2B Engagement with Customized Email Strategies</h1>
         <p class="mb-8 leading-relaxed">Elevate your business with SmartLeadsX. Our expertise in analyzing thousands of B2B campaigns transforms into bespoke cold email strategies. We turn cold emailing into a dynamic tool for generating valuable B2B connections..</p>
