--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div>
         <a class="flex-auto font-smf text-3xl  font-extrabold dark:text-white text-black" href="#">
           <title>SmartLeadX</title>
-          <img alt="logo" class="w-full " src="assets/styles/logo.png">
+          <img alt="logo" class="w-full " src="">
 
         </a>
       </div>
