--- a/index.html
+++ b/index.html
@@ -393,9 +393,9 @@
         <a class="flex title-font font-medium items-center md:justify-start justify-center ">
 
 
-          <span class=" text-3xl font-smf h-10 dark:text-gray-300">SmartLeadX</span>
+          <span class=" text-3xl font-smf h-10 dark:text-gray-300">SmartLeadsX</span>
         </a>
-        <p class="mt-2 text-sm text-gray-500">Bla BLa bla. </p>
+        <p class="mt-2 text-sm text-gray-500"> </p>
       </div>
       <div class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center text-sm">
         <div class="lg:w-1/4 md:w-1/2 w-full px-4">
@@ -480,10 +480,10 @@
     </div>
     <div class="bg-white dark:bg-black">
       <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-        <p class="text-gray-500 text-sm text-center sm:text-left">© 2021 <span class="font-smf"><span
-              class="text-primary1">S</span>upermodule</span>. All rights reserved.
+        <p class="text-gray-500 text-sm text-center sm:text-left">© 2024 <span class="font-smf"><span
+              class="text-primary1">S</span>SmartLeadsX</span>. All rights reserved.
           <a href="https://twitter.com/vyvakz" aria-label="Twitter" rel="noopener noreferrer" class="text-gray-600 ml-1"
-            target="_blank">@vyvakz</a>
+            target="_blank"> </a>
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
           <a class="text-gray-500 hover:text-primary1" href="https://fb.me/supermoduleio" aria-label="Facebook">
