--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     <div class="bg-white dark:bg-black">
       <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
         <p class="text-gray-500 text-sm text-center sm:text-left">© 2024 <span class="font-smf"><span
-              class="text-primary1">S</span>SmartLeadsX</span>. All rights reserved.
+              class="text-primary1"></span>SmartLeadsX</span>. All rights reserved.
           <a href="https://twitter.com/vyvakz" aria-label="Twitter" rel="noopener noreferrer" class="text-gray-600 ml-1"
             target="_blank"> </a>
         </p>
