--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <div class="hidden w-full lg:flex lg:place-items-start lg:w-auto" id="menu">
         <ul class="
-             pt-4
+             pt-3
              text-base 
              font-medium
              lg:flex
@@ -165,7 +165,7 @@
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Revolutionize Your B2B Engagement with Customized Email Strategies</h1>
         <p class="mb-8 leading-relaxed">Elevate your business with SmartLeadsX. Our expertise in analyzing thousands of B2B campaigns transforms into bespoke cold email strategies. We turn cold emailing into a dynamic tool for generating valuable B2B connections..</p>
         <div class="flex justify-center">
-          <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
+          <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Book a call</button>
         </div>
       </div>
     </div>
