--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <ul class="
              pt-3
              text-base 
-             font-medium
+             font-small
              lg:flex
              lg:justify-between 
              lg:pt-0
