--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
   <section id="section2" class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="text-center mb-20">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4">10X your LinkedIn sales outreach, productivity, and results</h1>
-        <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-500s">The power of a dedicated LinkedIn SDR at an affordable cost. Our job is to increase your productivity and return on investment while generating you qualified leads.</p>
+        <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4">Unleashing the power of strategic email campaigns to generate revenue</h1>
+        <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-500s">From countless B2B campaigns across diverse industries, we've gathered incredible insights. We use that to get your ideal decision-makers' attention and smoothly guide them right into your sales funnel.</p>
         <div class="flex mt-6 justify-center">
           <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
         </div>
@@ -192,9 +192,8 @@
             </svg>
           </div>
           <div class="flex-grow">
-            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Shooting Stars</h2>
+            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Target List Building</h2>
             <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine, ramps microdosing banh mi pug VHS try-hard.</p>
-            <a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
               </svg>
@@ -210,9 +209,8 @@
             </svg>
           </div>
           <div class="flex-grow">
-            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">The Catalyzer</h2>
+            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Custom Email Writing</h2>
             <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine, ramps microdosing banh mi pug VHS try-hard.</p>
-            <a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
               </svg>
@@ -227,9 +225,8 @@
             </svg>
           </div>
           <div class="flex-grow">
-            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Neptune</h2>
+            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Outreach Execution</h2>
             <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine, ramps microdosing banh mi pug VHS try-hard.</p>
-            <a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
               </svg>
