--- a/index.html
+++ b/index.html
@@ -168,7 +168,6 @@
           <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Book a call</button>
         </div>
       </div>
-    </div>
   </section>
 
 
@@ -195,7 +194,6 @@
             <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Target List Building</h2>
             <p class="leading-relaxed text-base">We delve deep into your market, identifying prospects that align perfectly with your business vision.</p>
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7"></path>
               </svg>
             </a>
           </div>
@@ -212,7 +210,6 @@
             <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Custom Email Writing</h2>
             <p class="leading-relaxed text-base">Our team of experts creates engaging, tailored email content designed to elicit responses and foster connections.</p>
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7"></path>
               </svg>
             </a>
           </div>
@@ -228,7 +225,6 @@
             <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Outreach Execution</h2>
             <p class="leading-relaxed text-base">We manage the sending process, ensuring your message reaches the right people at the right time.</p>
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7"></path>
               </svg>
             </a>
           </div>
@@ -262,7 +258,6 @@
               <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
               <a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                  <path d="M5 12h14M12 5l7 7-7 7"></path>
                 </svg>
               </a>
             </div>
@@ -296,7 +291,6 @@
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                   <circle cx="6" cy="6" r="3"></circle>
                   <circle cx="6" cy="18" r="3"></circle>
-                  <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"></path>
                 </svg>
               </div>
               <h2 class="text-gray-900 text-lg title-font font-medium">3. Comprehensive Campaign Optimization</h2>
@@ -308,10 +302,10 @@
                 </svg>
               </a>
             </div>
+             <button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Book a call</button>
           </div>
         </div>
       </div>
-    </div>
   </section>
   <!-- Section3  END-->
 
