--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
       <div class="flex flex-col text-center w-full mb-20">
         <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900">Unleashing the power of strategic email campaigns to generate revenue
         </h1>
+         <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-500s">Experience the power of expert-led cold email campaigns at an accessible cost. Our dedicated professionals use their expertise to build an outreach system that not only generates leads but also nurtures potential clients into long-term partners.</p>
       </div>
       <div class="flex flex-wrap -m-4">
         <div class="p-4 md:w-1/3">
@@ -296,6 +297,7 @@
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 </svg>
               </a>
+            </div>
             </div>
              <button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Book a call</button>
           </div>
