--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
               <h2 class="text-gray-900 text-lg title-font font-medium">2. Advanced Email Personalization</h2>
             </div>
             <div class="flex-grow">
-              <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+              <p class="leading-relaxed text-base">We tailor each campaign to reflect your brand's voice and values, ensuring every email strikes a chord with potential clients.</p>
               <a class="mt-3 text-indigo-500 inline-flex items-center">Learn More
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -293,12 +293,13 @@
               <h2 class="text-gray-900 text-lg title-font font-medium">3. Comprehensive Campaign Optimization</h2>
             </div>
             <div class="flex-grow">
-              <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+              <p class="leading-relaxed text-base">Leveraging real-time data, we continuously refine your campaigns for maximum impact and engagement.</p>
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 </svg>
               </a>
             </div>
-            </div>
+           </div>
+          </div>
              <button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Book a call</button>
           </div>
         </div>
