--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               <h2 class="text-gray-900 text-lg title-font font-medium">1. In-depth A/B Testing</h2>
             </div>
             <div class="flex-grow">
-              <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+              <p class="leading-relaxed text-base">After determining the messaging strategy and the target audience, we start playing around with some ideas. We're trying to figure out, based on actual data, which messages are really hitting home with our audience.</p>
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 </svg>
             </div>
