--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <li>
             <div class="flex flex-col items-center text-center justify-center md:pr-8">
               <a class=" hover:text-primary2 focus:text-primary1" href="#section1" id="menu1">
-                <h2 class="font-medium title-font mt-4 text-lg">Home</h2>
+                <h2 class="font-medium title-font mt-4 text-sl">Home</h2>
 
               </a>
               <div id="menu1-underline" class="w-full h-1 bg-primary1 rounded mb-4"></div>
