--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <li>
             <div class="flex flex-col items-center text-center justify-center md:pr-8 ">
               <a class="hover:text-primary2 focus:text-primary1" href="#section2" id="menu2">
-                <h2 class="font-medium title-font mt-4 text-lg">How it works</h2>
+                <h2 class="font-medium title-font mt-4 text-sl">How it works</h2>
               </a>
               <div id="menu2-underline" class="w-full h-1 bg-primary1 rounded mb-4 hidden "></div>
             </div>
@@ -102,7 +102,7 @@
           <li>
             <div class="flex flex-col items-center text-center justify-center md:pr-8">
               <a class="hover:text-primary2 focus:text-primary1" href="#section3" id="menu3">
-                <h2 class="font-medium title-font mt-4 text-lg">Methodology</h2>
+                <h2 class="font-medium title-font mt-4 text-sl">Methodology</h2>
               </a>
               <div id="menu3-underline" class="w-full h-1 bg-primary1 rounded mb-4 hidden"></div>
             </div>
@@ -111,7 +111,7 @@
           <li>
             <div class="flex flex-col items-center text-center justify-center md:pr-8">
               <a class="hover:text-primary2 focus:text-primary1" href="#section4" id="menu4">
-                <h2 class="font-medium title-font mt-4 text-lg">Team</h2>
+                <h2 class="font-medium title-font mt-4 text-sl">Team</h2>
               </a>
               <div id="menu4-underline" class="w-full h-1 bg-primary1 rounded mb-4 hidden"></div>
             </div>
