--- a/index.html
+++ b/index.html
@@ -358,8 +358,9 @@
   <!-- Section4 END -->
 
   
-  <!-- Calendly inline widget begin -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/smartleadsx/30min" style="min-width:320px;height:700px;"></div>
+<!-- Calendly inline widget begin -->
+<div class="flex items-center mb-3">
+  <div class="calendly-inline-widget" data-url="https://calendly.com/smartleadsx/30min?hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Calendly inline widget end -->
 
