--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 
   
 <!-- Calendly inline widget begin -->
-<div class="flex items-center mb-3">
+<div class="flex flex-col text-center w-full mb-20">
   <div class="calendly-inline-widget" data-url="https://calendly.com/smartleadsx/30min?hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Calendly inline widget end -->
