--- a/index.html
+++ b/index.html
@@ -370,6 +370,10 @@
  </div>
       <div class="flex flex-wrap">
     </div>      
+
+      </div>
+        </div>
+      </div>
 <!-- Calendly inline widget begin -->
 
   <div class="calendly-inline-widget" data-url="https://calendly.com/smartleadsx/30min?hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
