--- a/index.html
+++ b/index.html
@@ -361,25 +361,23 @@
 
  <!--Section5 START-->
 
-<section id="section4" class="text-gray-600 body-font">
+<section id="section5" class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-col text-center w-full mb-20">
         <h2 class="text-xs text-indigo-500 tracking-widest font-medium title-font mb-1">BOOK YOUR FREE CONSULTATION CALL</h2>
         <h1 class="sm:text-4xl text-3xl font-medium title-font mb-4 text-gray-900">Unleashing the power of strategic email campaigns to generate revenue</h1>  
-
- </div>
-      <div class="flex flex-wrap">
-    </div>      
-
       </div>
-        </div>
-      </div>
+    </div>
+      
+  <div class="items-center">
+    
+
 <!-- Calendly inline widget begin -->
 
   <div class="calendly-inline-widget" data-url="https://calendly.com/smartleadsx/30min?hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Calendly inline widget end -->
-
+  </div>    
   <!-- Section5 END -->
 
 
