--- a/index.html
+++ b/index.html
@@ -364,8 +364,7 @@
 <section id="section5" class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-col text-center w-full mb-20">
-        <h2 class="text-xs text-indigo-500 tracking-widest font-medium title-font mb-1">BOOK YOUR FREE CONSULTATION CALL</h2>
-        <h1 class="sm:text-4xl text-3xl font-medium title-font mb-4 text-gray-900">Unleashing the power of strategic email campaigns to generate revenue</h1>  
+        <h1 class="sm:text-4xl text-3xl font-medium title-font mb-4 text-gray-900">BOOK YOUR FREE CONSULTATION CALL</h1>  
       </div>
     </div>
       
