--- a/index.html
+++ b/index.html
@@ -37,19 +37,36 @@
 <body
   class=" bg-ltheme dark:bg-dtheme  xs:text-[20px] xs:leading-[27px] text-[16px] leading-[23px] font-normal dark:text-dtext text-ltext transition-colors duration-200 ease-in-out">
 
-<header class="text-gray-600 body-font w-full">
-  <div class="mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center justify-between">
+<header class="text-gray-600 body-font">
+  <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center justify-between">
+    <!-- Logo and title -->
     <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-      <!-- SVG and span code remains the same -->
+      <!-- SVG for the logo -->
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-purple-500 rounded-full" viewBox="0 0 24 24">
+        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+      </svg>
+      <!-- Title next to the logo -->
+      <span class="ml-3 text-xl">SmartLeadsX</span>
     </a>
+    
+    <!-- Navigation Links -->
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <!-- Link code remains the same -->
+      <a class="mr-5 hover:text-gray-900">First Link</a>
+      <a class="mr-5 hover:text-gray-900">Second Link</a>
+      <a class="mr-5 hover:text-gray-900">Third Link</a>
+      <a class="mr-5 hover:text-gray-900">Fourth Link</a>
     </nav>
+
+    <!-- Button -->
     <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
-      <!-- Button content remains the same -->
+      Button
+      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+        <path d="M5 12h14M12 5l7 7-7 7"></path>
+      </svg>
     </button>
   </div>
 </header>
+
 
 
   <!-- Alert section start -->
