--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     
     <!-- Navigation Links -->
 <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-  <a class="mr-10 hover:text-gray-900">First Link</a>
-  <a class="mr-10 hover:text-gray-900">Second Link</a>
-  <a class="mr-10 hover:text-gray-900">Third Link</a>
-  <a class="mr-10 hover:text-gray-900">Fourth Link</a>
+  <a class="mr-10 hover:text-gray-900">Why? </a>
+  <a class="mr-10 hover:text-gray-900">How? </a>
+  <a class="mr-10 hover:text-gray-900">Third Link </a>
+  <a class="mr-10 hover:text-gray-900">Fourth Link </a>
 </nav>
 
 
