--- a/index.html
+++ b/index.html
@@ -59,13 +59,19 @@
 
 
     <!-- Button -->
-<button class="inline-flex items-center bg-indigo-500 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0 text-white font-bold">
-  Button
-  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-    <path d="M5 12h14M12 5l7 7-7 7"></path>
-  </svg>
-</button>
 
+<a href="#section-5" class="inline-flex items-center bg-indigo-500 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0 text-white font-bold">
+  <button>
+    FREE CONSULTATION
+    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+      <path d="M5 12h14M12 5l7 7-7 7"></path>
+    </svg>
+  </button>
+</a>
+
+
+
+    
     
   </div>
 </header>
@@ -327,8 +333,14 @@
   <!-- Section4 END -->
 
 
- <!--Section5 START-->    
+<!--Section5 START-->    
 
+  <div id="section-5">
+  <!-- Content of section 5 -->
+</div>
+
+
+  
 <!-- Calendly inline widget begin -->
 
   <div class="calendly-inline-widget" data-url="https://calendly.com/smartleadsx/30min?hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
