--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Button -->
 
-<a href="#section-5" class="inline-flex items-center bg-indigo-500 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0 text-white font-bold">
+<a href="#section-5" class="inline-flex items-center bg-indigo-500 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-500 rounded text-base mt-4 md:mt-0 text-white font-bold">
   <button>
     FREE CONSULTATION
     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
