--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <img src="assets/styles/logo v2.png" alt="Logo" class="w-16 h-auto mr-3">
     
       <!-- Optionally, you can keep the SVG or replace it with the logo -->
-      <span class="ml-3 text-xl">SmartLeadsX</span>  
+      <span class="ml-3 text-md">SmartLeadsX</span>  
       <!-- Title next to the logo -->
     
     </a>
