--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     <!-- Navigation Links -->
 <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
   <a class="mr-10 hover:text-gray-900">Why? </a>
+  <a class="mr-10 hover:text-gray-900">     </a>
   <a class="mr-10 hover:text-gray-900">How? </a>
-  <a class="mr-10 hover:text-gray-900">Third Link </a>
 </nav>
 
 
     <!-- Button -->
 
-<a href="#section-5" class="inline-flex items-center bg-indigo-500 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-200 rounded text-base mt-4 md:mt-0 text-white font-bold">
+<a href="#section-5" class="inline-flex items-center bg-indigo-500 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-600 rounded text-base mt-4 md:mt-0 text-white font-bold">
   <button>
     FREE CONSULTATION
    
@@ -244,8 +244,8 @@
  <!--Section4 START-->
 
  <section class="text-gray-600 body-font">
-  <div class="container px-5 py-24 mx-auto flex flex-wrap">
-    <div class="flex relative pt-10 pb-20 sm:items-center md:w-2/3 mx-auto">
+  <div class="container px-8 py-24 mx-auto flex flex-wrap">
+    <div class="flex relative pt-10 pb-20 sm:items-center md:w-1/2 mx-auto">
       <div class="h-full w-6 absolute inset-0 flex items-center justify-center">
         <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
       </div>
