--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- class="dark:bg-gray-800 dark:text-gray-200" -->
 
 <body
-  class=" bg-ltheme dark:bg-dtheme  xs:text-[20px] xs:leading-[27px] text-[16px] leading-[23px] font-bold dark:text-dtext text-ltext transition-colors duration-200 ease-in-out">
+  class=" bg-ltheme dark:bg-dtheme  xs:text-[20px] xs:leading-[27px] text-[16px] leading-[23px] font-normal dark:text-dtext text-ltext transition-colors duration-200 ease-in-out">
 
 <header class="text-gray-600 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center justify-between">
@@ -244,8 +244,8 @@
  <!--Section4 START-->
 
  <section class="text-gray-600 body-font">
-  <div class="container px-8 py-24 mx-auto flex flex-wrap">
-    <div class="flex relative pt-10 pb-20 sm:items-center md:w-1/2 mx-auto">
+  <div class="container px-8 py-32 mx-auto flex flex-wrap">
+    <div class="flex relative pt-10 pb-24 sm:items-center md:w-1/3 mx-auto">
       <div class="h-full w-6 absolute inset-0 flex items-center justify-center">
         <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
       </div>
