--- a/index.html
+++ b/index.html
@@ -346,14 +346,13 @@
   <!-- Content of section 5 -->
 </div>
 
-
-  
 <!-- Calendly inline widget begin -->
-
-  <div class="calendly-inline-widget" data-url="https://calendly.com/smartleadsx/30min?hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
+<div class="calendly-inline-widget" data-url="https://calendly.com/smartleadsx/15min?primary_color=9686f2" style="min-width:320px;height:700px;">
+  
+</div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Calendly inline widget end -->
-  </div>    
+    
   <!-- Section5 END -->
 
 
