--- a/index.html
+++ b/index.html
@@ -246,13 +246,14 @@
            </div>
           </div>
 
+        <div class="flex justify-center">
          <a href="#section-5" class="inline-flex items-center bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-base mt-4 md:mt-0 text-white font-bold">
           <button>
             Book a call 
-          </button>
-         
+          </button> 
          </a>
-
+        </div>
+      
           </div>
         </div>
       </div>
