--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="msapplication-TileImage" content="./assets/images/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <meta name="description"
-    content="Your Marketplace for Blockchain, Metaverse, Web3, NFT, Crypto Services. Start building your blockchain utilities 🚀" />
+    content="Experience the power of expert-led cold email campaigns at an accessible cost. 🚀" />
 
   <meta property="og:url" content="https://smartleadx.com" />
   <meta property="og:type" content="Website" />
@@ -50,7 +50,7 @@
 
     <!-- Button -->
 
-<a href="#section-5" class="inline-flex items-center bg-indigo-500 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-600 rounded text-base mt-4 md:mt-0 text-white font-bold">
+<a href="#booking" class="inline-flex items-center bg-indigo-500 border-0 py-1 px-3 focus:outline-none hover:bg-indigo-600 rounded text-base mt-4 md:mt-0 text-white font-bold">
   <button>
     FREE CONSULTATION
    
@@ -99,7 +99,7 @@
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Revolutionize Your B2B Engagement with Customized Email Strategies</h1>
         <p class="mb-8 leading-relaxed">Elevate your business with SmartLeadsX. Our expertise in analyzing thousands of B2B campaigns transforms into bespoke cold email strategies. We turn cold emailing into a dynamic tool for generating valuable B2B connections..</p>
         <div class="flex justify-center">
-         <a href="#section-5" class="inline-flex items-center bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-base mt-4 md:mt-0 text-white font-bold">
+         <a href="#booking" class="inline-flex items-center bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-base mt-4 md:mt-0 text-white font-bold">
           <button>
             Book a call 
           </button>
@@ -170,7 +170,7 @@
         </div>
       <!-- Button Container -->
        <div class="flex justify-center">
-  <a href="#section-5" class="inline-flex items-center bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-base mt-4 md:mt-0 text-white font-bold">
+  <a href="#booking" class="inline-flex items-center bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-base mt-4 md:mt-0 text-white font-bold">
     Book a call
   </a>
 </div>
@@ -247,7 +247,7 @@
           </div>
 
         <div class="flex justify-center">
-         <a href="#section-5" class="inline-flex items-center bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-base mt-4 md:mt-0 text-white font-bold">
+         <a href="#booking" class="inline-flex items-center bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-base mt-4 md:mt-0 text-white font-bold">
           <button>
             Book a call 
           </button> 
@@ -345,10 +345,14 @@
 
 <!--Section5 START-->    
 
-  <div id="section-5">
+  <div id="booking">
   <!-- Content of section 5 -->
 </div>
 
+<div class="text-center lg:w-2/3 w-full">
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Book your FREE consultation call</h1>
+</div>
+  
 <!-- Calendly inline widget begin -->
 <div class="calendly-inline-widget" data-url="https://calendly.com/smartleadsx/15min?primary_color=9686f2" style="min-width:320px;height:700px;">
   
@@ -357,18 +361,6 @@
 <!-- Calendly inline widget end -->
     
   <!-- Section5 END -->
-
-
-  
-
-  <!-- Partners START-->
-
- 
-
-
-
-
-  <!-- Partners END-->
 
   <!-- Footer Start -->
   <footer class="bg-lfoot dark:bg-dfoot body-font border-t border-dborder shadow-inner">
