--- a/index.html
+++ b/index.html
@@ -265,8 +265,10 @@
   
  <!--Section4 START-->
 
- <section class="text-gray-600 body-font">
-  <div class="container px-5 py-32 mx-auto flex flex-wrap">
+ <section id="section4" class="text-gray-600 body-font">
+
+<div class="container px-5 py-24 mx-auto">
+
     <div class="flex relative pt-10 pb-20 sm:items-center md:w-2/3 mx-auto">
       <div class="h-full w-6 absolute inset-0 flex items-center justify-center">
         <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
@@ -347,8 +349,11 @@
 
   <div id="booking">
   <!-- Content of section 5 -->
-</div>
+  </div>
 
+ <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+ </div>  
+  
 <div class="text-center lg:w-2/3 w-full">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Book your FREE consultation call</h1>
 </div>
