--- a/index.html
+++ b/index.html
@@ -347,24 +347,19 @@
 
 <!--Section5 START-->    
 
-  <div id="booking">
-  <!-- Content of section 5 -->
-  </div>
-
- <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
- </div>  
-  
-<div class="text-center lg:w-2/3 w-full">
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Book your FREE consultation call</h1>
-</div>
-  
-<!-- Calendly inline widget begin -->
+<div id="booking" class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+  <div class="text-center lg:w-2/3 w-full">
+    <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Book your FREE consultation call</h1>
+    <!-- Add more content here if needed -->
+ <!-- Calendly inline widget begin -->
 <div class="calendly-inline-widget" data-url="https://calendly.com/smartleadsx/15min?primary_color=9686f2" style="min-width:320px;height:700px;">
   
 </div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Calendly inline widget end -->
-    
+  </div>
+</div>
+  
   <!-- Section5 END -->
 
   <!-- Footer Start -->
