--- a/index.html
+++ b/index.html
@@ -341,7 +341,24 @@
 
 
   <!-- Section4 END -->
+<!-- Test -->
 
+  section class="text-gray-600 body-font">
+  <div class="container px-5 py-24 mx-auto flex flex-wrap">
+    <!-- Repeat for each item -->
+    <div class="flex relative pt-10 pb-24 sm:items-center md:w-2/3 mx-auto"> <!-- Increased bottom padding -->
+      <!-- ... other elements ... -->
+      <div class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row">
+        <!-- ... other elements ... -->
+        <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
+          <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">Shooting Stars</h2>
+          <p class="leading-loose">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p> <!-- Increased line height -->
+        </div>
+      </div>
+    </div>
+    <!-- ... repeat for other items ... -->
+  </div>
+</section>
 
 <!--Section5 START-->    
 
