--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="icon" type="image/png" sizes="32x32" href="assets/styles/logo v2.png">
 
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="./assets/images/favicon/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="assets/styles/logo v2.png">
   <meta name="theme-color" content="#ffffff">
   <meta name="description"
     content="Experience the power of expert-led cold email campaigns at an accessible cost. 🚀" />
