--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             </svg>
           </div>
           <div class="flex-grow pl-4">
-            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 1</h2>
+            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Targeted Prospect Research</h2>
             <p class="leading-relaxed">VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk bespoke try-hard cliche palo santo offal.</p>
           </div>
         </div>
@@ -292,7 +292,7 @@
             </svg>
           </div>
           <div class="flex-grow pl-4">
-            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 2</h2>
+            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Personalized Email Crafting</h2>
             <p class="leading-relaxed">Vice migas literally kitsch +1 pok pok. Truffaut hot chicken slow-carb health goth, vape typewriter.</p>
           </div>
         </div>
@@ -307,7 +307,7 @@
             </svg>
           </div>
           <div class="flex-grow pl-4">
-            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">STEP 3</h2>
+            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">Efficient Outreach Execution</h2>
             <p class="leading-relaxed">Coloring book nar whal glossier master cleanse umami. Salvia +1 master cleanse blog taiyaki.</p>
           </div>
         </div>
@@ -333,10 +333,7 @@
               <path d="M22 4L12 14.01l-3-3"></path>
             </svg>
           </div>
-          <div class="flex-grow pl-4">
-            <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider">FINISH</h2>
-            <p class="leading-relaxed">Pitchfork ugh tattooed scenester echo park gastropub whatever cold-pressed retro.</p>
-          </div>
+          
         </div>
       </div>
       <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="https://dummyimage.com/1200x500" alt="step">
