--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           
         </div>
       </div>
-      <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="https://dummyimage.com/1200x500" alt="step">
+      <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="assets/styles/melinda-gimpel-5Ne6mMQtIdo-unsplash.jpg" alt="step">
     </div>
   </div>
 </section>
