--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 </head>
 <!-- class="dark:bg-gray-800 dark:text-gray-200" -->
 
-<body
+<body> 
   class=" bg-ltheme dark:bg-dtheme  xs:text-[20px] xs:leading-[27px] text-[16px] leading-[23px] font-normal dark:text-dtext text-ltext transition-colors duration-200 ease-in-out">
-
-<header class="text-gray-600 body-font">
+  
+<header class="flex items-center justify-between p-5 h-24" class="text-gray-600 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center justify-between">
 
       <!-- Logo and title -->
@@ -34,7 +34,7 @@
       <!-- Logo image -->
       
 
-<img src="assets/styles/logo v2.png" alt="Logo" class="h-full object-contain mr-3">
+<img src="assets/styles/logo v2.png" alt="Logo" class="h-18 object-contain mr-3">
 
 
       
