--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           </div>
           <div class="flex-grow">
             <h2 class="text-gray-900 text-lg title-font font-medium mb-3">Custom Email Writing</h2>
-            <p class="leading-relaxed text-base">Our team of experts creates engaging, tailored email content designed to elicit responses and foster connections.</p>
+            <p class="leading-relaxed text-base">We create engaging, tailored email content designed to elicit responses and foster connections.</p>
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
               </svg>
             </a>
