--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <div class="container px-5 py-2 mx-auto">
 
 <div class="text-center mb-20">
-        <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4">Unleashing the power of strategic email campaigns to generate revenue</h1>
+        <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 mb-4">Unleash the power of strategic emails to generate revenue</h1>
         <p class="text-base leading-relaxed xl:w-2/4 lg:w-3/4 mx-auto text-gray-500s">Experience the power of expert-led cold email campaigns at an accessible cost. Our dedicated professionals use their expertise to build an outreach system that not only generates leads but also nurtures potential clients into long-term partners.</p>
         <div class="flex mt-6 justify-center">
           <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
