--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html class="scroll-smooth" lang="en">
 
+ <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Website Title</title>
+  <link href="/path/to/tailwind.css" rel="stylesheet">
+</head>
+
 
  
  <div class="bg-white pb-6 sm:pb-8 lg:pb-12">
