--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <header class="mb-8 flex items-center justify-between py-4 md:mb-12 md:py-8 xl:mb-16">
       <!-- logo - start -->
       <a href="/" class="inline-flex items-center gap-2.5 text-2xl font-bold text-black md:text-3xl" aria-label="logo">
-    <svg viewBox="0 0 95 94" xmlns="http://www.w3.org/2000/svg" style="max-width: 100%; height: auto;">
-    <path d="M95 0V47L47.5 94H0V47L47.5 0H95Z" fill="currentColor" />
-</svg>
+  <div class="w-32 h-auto"> <!-- Adjust the width (w-32) as necessary -->
+    <svg viewBox="0 0 95 94" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-full h-auto">
+        <path d="..."></path>
+    </svg>
+</div>
+
 
           <path d="M95 0V47L47.5 94H0V47L47.5 0H95Z" />
         </svg>
