--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
     <header class="mb-8 flex items-center justify-between py-4 md:mb-12 md:py-8 xl:mb-16">
       <!-- logo - start -->
       <a href="/" class="inline-flex items-center gap-2.5 text-2xl font-bold text-black md:text-3xl" aria-label="logo">
-  <div class="w-32 h-auto"> <!-- Adjust the width (w-32) as necessary -->
-    <svg viewBox="0 0 95 94" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-full h-auto">
-        <path d="..."></path>
-    </svg>
-</div>
-
-
-          <path d="M95 0V47L47.5 94H0V47L47.5 0H95Z" />
+        <svg width="95" height="94" viewBox="0 0 95 94" class="h-auto w-6 text-indigo-500" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <path d="M96 0V47L48 94H0V47L48 0H96Z" />
         </svg>
 
         Flowrift
@@ -663,81 +657,7 @@
         <!-- social - end -->
       </div>
 
-      <!-- nav - start -->
-      <div>
-        <div class="mb-4 font-bold uppercase tracking-widest text-gray-100">Products</div>
-
-        <nav class="flex flex-col gap-4">
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">Overview</a>
-          </div>
-
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">Solutions</a>
-          </div>
-
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">Pricing</a>
-          </div>
-
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">Customers</a>
-          </div>
-        </nav>
-      </div>
-      <!-- nav - end -->
-
-      <!-- nav - start -->
-      <div>
-        <div class="mb-4 font-bold uppercase tracking-widest text-gray-100">Company</div>
-
-        <nav class="flex flex-col gap-4">
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">About</a>
-          </div>
-
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">Investor Relations</a>
-          </div>
-
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">Jobs</a>
-          </div>
-
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">Press</a>
-          </div>
-
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">Blog</a>
-          </div>
-        </nav>
-      </div>
-      <!-- nav - end -->
-
-      <!-- nav - start -->
-      <div>
-        <div class="mb-4 font-bold uppercase tracking-widest text-gray-100">Support</div>
-
-        <nav class="flex flex-col gap-4">
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">Contact</a>
-          </div>
-
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">Documentation</a>
-          </div>
-
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">Chat</a>
-          </div>
-
-          <div>
-            <a href="#" class="text-gray-400 transition duration-100 hover:text-indigo-500 active:text-indigo-600">FAQ</a>
-          </div>
-        </nav>
-      </div>
-      <!-- nav - end -->
+     
 
       <!-- nav - start -->
       <div>
@@ -760,7 +680,7 @@
       <!-- nav - end -->
     </div>
 
-    <div class="border-t border-gray-800 py-8 text-center text-sm text-gray-400">© 2021 - Present Flowrift. All rights reserved.</div>
+    <div class="border-t border-gray-800 py-8 text-center text-sm text-gray-400">© 2024 - SmartLeadsX. All rights reserved.</div>
   </footer>
 </div>
 <!-- footer - end -->
